--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "node server/leaderboard-server.mjs",
+    "dev:full": "concurrently -k -n api,web -c cyan,magenta \"npm:dev:api\" \"npm:dev -- --host\"",
     "build": "tsc -b && vite build",
     "test": "vitest run",
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^5.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -17,6 +20,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^9.2.1",
     "jsdom": "^24.1.1",
     "typescript": "^5.5.4",
     "vite": "^5.3.4",
