--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
     "express": "^5.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
